# upc_world_bot

./: .env.example  .gitignore  ALL_FIXES_COMPLETE.md  CHANGELOG.md  CHECKLIST.md  COMMIT_SUMMARY.md  COMPLETE_DEVELOPMENT_REPORT.md  COMPLETE_FIXES_REPORT.md  COMPREHENSIVE_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES.md  CRITICAL_FIXES_QUICK_REFERENCE.md  CRITICAL_FIXES_REPORT.md  DATABASE_INIT_FIX.md  DEPLOYMENT.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  EVENT_LOOP_FIX_SUMMARY.md  FINAL_REPORT.md  FIXES_LOG.md  GITHUB_PUSH_GUIDE.md  GIT_FIX_REPORT.md  LICENSE  MIDDLEWARE_IMPROVEMENTS.md  MIGRATION_INSTRUCTIONS.md  Makefile  NAVIGATION_IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PHASE_3_COMPLETION.md  PHASE_3_FIXES_SUMMARY.md  PHASE_3_READY.txt  PHASE_6_SESSION_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_DEPLOY.md  RAILWAY_DEPLOYMENT_COMPLETE.md  RAILWAY_SETUP.md  (+17 more)
.github/: README.md
.github/workflows/: deploy.yml  tests.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 001_initial.py  002_add_photo_url_field.py  003_add_photo_id_field.py  004_create_auth_codes_table.py
bot/: __init__.py  api_server.py  config.py  launcher.py  main.py
bot/database/: __init__.py  base.py  models.py  session.py
bot/database/migrations/versions/: 006_ensure_referral_codes.py
bot/database/repositories/: event_repository.py  transaction_repository.py  user_repository.py
bot/handlers/: admin.py  common.py  profile.py  referral.py  shop.py  start.py
bot/handlers/games/: __init__.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: auth.py  cache.py  logging.py  throttling.py
bot/services/: auth_service.py  qr_generator.py  referral_service.py  user_service.py  website_sync.py
bot/utils/: __init__.py  decorators.py  formatters.py  logger.py  navigation.py  token_storage.py
docs/: CORS_CONFIGURATION_FIX.md  CRITICAL_FIXES_APPLIED.md  EVENT_LOOP_FIX.md  PHASE_3_COMPLETE.md  PHASE_3_CRITICAL_FIXES.md  PHASE_3_CRITICAL_FIXES_REPORT.md  PHASE_3_STATUS.md  PHASE_4_TRACEBACK_LOGGING.md  PHASE_5_DATABASE_CONNECTION_POOLING.md  PHASE_7_PINNED_NAVIGATION_REPORT.md  RAILWAY_CRITICAL_FIXES.md
tests/: conftest.py  test_handlers.py  test_repositories.py  test_services.py
